fixtures/cs-hash-02/good/rounds-variable.ts
import bcrypt from "bcrypt";

export function hashPassword(password: string) {
	const rounds = 8;
	return bcrypt.hashSync(password, rounds);
}
