fixtures/cs-hash-02/bad/gen-salt-weak.ts
import bcrypt from "bcrypt";

export function hashPassword(password: string) {
	return bcrypt.genSalt(8);
}
